--- a/config/config.json
+++ b/config/config.json
@@ -4,7 +4,12 @@
     "password": "root",
     "database": "tescoding",
     "host": "127.0.0.1",
-    "dialect": "mysql"
+    "dialect": "mysql",
+    "dialectOptions": {
+        "dateStrings": true,
+        "typeCast": true
+    },
+    "timezone": "+07:00"
   },
   "test": {
     "username": "root",
